# CrossPlatformTest

./: .gitignore  BuildProjects.sh  CMakeLists.txt
src/: main.cpp
